--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": ["eslint:recommended", "standard"],
+  "env": {
+    "es6": true
+  },
   "rules": {
     "semi": [2, "always"],
     "no-extra-semi": 2,
