--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "bugs": {
     "url": "https://github.com/blinkmobile/aws-s3.js/issues"
   },
+  "dependencies": {
+    "glob": "7.0.0"
+  },
   "devDependencies": {
     "ava": "^0.12.0",
     "eslint": "^2.2.0",
@@ -31,7 +34,7 @@
     "ava": "nyc ava",
     "eslint": "eslint --fix .",
     "fixpack": "fixpack",
-    "nyc": "nyc check-coverage -s 80 -b 50 -f 80 -l 80",
+    "nyc": "nyc check-coverage -s 90 -b 90 -f 90 -l 90",
     "posttest": "npm-run-all eslint fixpack",
     "test": "npm-run-all -s ava nyc"
   }
