--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "url": "https://github.com/blinkmobile/aws-s3.js/issues"
   },
   "dependencies": {
-    "glob": "7.0.0"
+    "glob": "7.0.0",
+    "worker-farm": "1.3.1"
   },
   "devDependencies": {
     "ava": "^0.12.0",
