--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "url": "https://github.com/blinkmobile/aws-s3.js/issues"
   },
   "dependencies": {
+    "file-type": "^3.8.0",
     "glob": "^7.0.3",
+    "mime-types": "^2.1.10",
     "pify": "^2.3.0",
+    "read-chunk": "^1.0.1",
     "worker-farm": "^1.3.1"
   },
   "devDependencies": {
