--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "co": "^4.6.0",
     "file-type": "^3.8.0",
     "glob": "^7.0.3",
+    "ignore-by-default": "^1.0.1",
     "lodash.chunk": "^4.0.6",
     "mime-types": "^2.1.10",
     "pify": "^2.3.0",
