--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "our simplified wrapper for common AWS S3 operations",
   "version": "2.1.1",
   "bugs": {
-    "url": "https://github.com/blinkmobile/aws-s3.js/issues"
+    "url": "https://github.com/mderrier/aws-s3.js/issues"
   },
   "dependencies": {
     "anymatch": "1.3.0",
@@ -14,6 +14,7 @@
     "lodash.chunk": "4.0.6",
     "mime-types": "2.1.10",
     "pify": "2.3.0",
+    "progress-stream": "^1.2.0",
     "read-chunk": "2.0.0",
     "worker-farm": "1.3.1"
   },
@@ -42,7 +43,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lderrier/aws-s3.js.git"
+    "url": "git+https://github.com/mderrier/aws-s3.js.git"
   },
   "scripts": {
     "ava": "nyc ava",
