--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "anymatch": "1.3.0",
     "co": "4.6.0",
     "file-type": "3.8.0",
-    "glob": "7.0.3",
+    "glob": "7.1.1",
     "ignore-by-default": "1.0.1",
     "lodash.chunk": "4.0.6",
+    "lodash.reverse": "4.0.1",
+    "lodash.sortby": "4.7.0",
+    "lodash.uniq": "4.5.0",
     "mime-types": "2.1.10",
+    "p-all": "1.0.0",
+    "p-series": "1.0.0",
     "pify": "2.3.0",
-    "progress-stream": "^1.2.0",
     "read-chunk": "2.0.0",
     "worker-farm": "1.3.1"
   },
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "0.17.0",
     "eslint": "^3.6.1",
     "eslint-config-semistandard": "^7.0.0",
     "eslint-config-standard": "^6.2.0",
